﻿------------------------CVS after 3.00 beta 6----------------
CHANGE:  Improved the appearance of hidden/sudden.
CHANGE:  After changing sort to "BEST", focus will be changed to the 
	the most-played song.
CHANGE:  Texture Hints have been removed in favor of smarter, automatic
	texture format chooser.
CHANGE:  New Nullsoft NSIS installer.
CHANGE:  NG no longer breaks combo.
NEW FEATURE:  Hidden easter egg.  You have to be "perfect" to find it.
	And cheaters never prosper!
NEW FEATURE:  If a song is missing Notes of a certain NotesType, Notes of 
	the missing type will be generated from the existing types.  For 
	example, this will allow any pump song to be played in the dance
	game mode, and vice versa.
NEW FEATURE:  Package Exporter now can export Announcers, BGAnimations,
	Courses, NoteSkins, RandomMovies, Themes, and Visualizations.
NEW FEATURE:  Package Exporter now has two options: "Export As One", and 
	"Export As Individual".  Export As One will create a package of all
	selected items, and Export As Individual will create packages for each
	of the selected items.
CHANGE:  Renamed "Skins" folder to "NoteSkins" to avoid confusion with DWI 
	and KIU.
NEW FEATURE:  F6 during gameplay to toggle assist tick.
CHANGE:  While AutoPlay is ON, life will not change and score/dance points 
	will not accumulate.
NEW FEATURE:  Song list can handle any number of groups.
BUG FIX:  Fix joystick Y axis.
NEW FEATURE:  Add level 8 judge difficulty.
CHANGE:  While AutoPlay is on, life, score, and dance points will not 
	accumulate.
CHANGE:  DWI save support added to editor.
NEW FEATURE:  Editor can edit BackgroundChanges.  Use the 'B' key.
NEW FEATURE:  Delayed escape/back key is now optional.
CHANGE:  Slow-motion is now ~ instead of LShift.
BUG FIX:  Fix pump doubles offset.
NEW FEATURE:  Support for #DIFFICULTY in KSF.
CHANGE:  Allow starting without a keyboard or mouse.
NEW FEATURE:  Support for "artist - title - difficulty" titles in KSF.